# ge

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  README_en.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  blacklist.txt  build.sh  build_third_party.sh  classify_rule.txt  classify_rule.yaml  requirements.txt  version.info
.claude/: settings.json
compiler/graph/optimize/autofuse/codegen/: CMakeLists.txt  ascendc_api_registry.cpp  codegen.cpp  codegen.h  codegen_infershape.cpp  codegen_kernel.cpp  codegen_kernel.h  codegen_kernel_loop.cpp  codegen_kernel_loop.h  codegen_tiling.cpp  codegen_tiling.h  codegen_tiling_data.cpp  codegen_tiling_data.h
dflow/base/: CMakeLists.txt
dflow/base/deploy/: deploy_planner.cc  deploy_planner.h  exchange_service.h  model_deployer.h
dflow/base/exec_runtime/: execution_runtime.cc  execution_runtime.h
dflow/base/model/: endpoint.h  flow_model.cc  flow_model_om_loader.cc  flow_model_om_loader.h  flow_model_om_saver.cc  flow_model_om_saver.h  graph_model.cc  model_deploy_resource.h  model_relation.cc  model_relation.h  pne_model.cc  serialized_model.h
dflow/base/proto/: udf_attr.proto  udf_def.proto
dflow/base/utils/: data_flow_utils.cc  data_flow_utils.h  process_utils.cc  process_utils.h
examples/custom_op/args_refresh_add_custom/python/: CMakeLists.txt  README.md  README_en.md  run.sh
examples/custom_op/args_refresh_add_custom/python/proto/: add_custom.cc  add_custom.h
examples/custom_op/args_refresh_add_custom/python/src/: run.py
examples/fusion_pass/3_decompose_grouped_conv_to_splited_pass/: CMakeLists.txt  README.md
examples/fusion_pass/3_decompose_grouped_conv_to_splited_pass/data/: model.onnx  torch_forward.py  torch_gen_onnx.py
examples/fusion_pass/3_decompose_grouped_conv_to_splited_pass/gen_es_api/: CMakeLists.txt
examples/fusion_pass/3_decompose_grouped_conv_to_splited_pass/src/: decompose_grouped_conv_to_splited_pass.cpp
parser/parser/func_to_graph/: CMakeLists.txt  func2graph.cc  func2graph.h  func2graph.py
tests/acl_ut/depends/acl/: CMakeLists.txt
tests/acl_ut/depends/acl/src/: acl_stub.cpp
tests/autofuse/framework/eager_style_graph_builder/: CMakeLists.txt  all_ops.cpp  all_ops.h  all_ops_cpp.h  compliant_op_desc_builder.cpp  compliant_op_desc_builder.h  esb_funcs.cpp  esb_funcs.h  esb_funcs_cpp.h  esb_graph.cpp  esb_graph.h  esb_tensor.h
tests/autofuse/st/ascir/: CMakeLists.txt
tests/autofuse/st/ascir/code_dumper/: code_dumper_unittest.cc
tests/autofuse/st/codegen/: CMakeLists.txt  test_codegen_infershape.cpp
tests/autofuse/ut/: CMakeLists.txt
tests/autofuse/ut/ascendc/: CMakeLists.txt
tests/autofuse/ut/ascir/: CMakeLists.txt  ascir_utils_unittest.cc  code_dumper_unittest.cc  test_ascir.cpp  test_ascir_graph.cpp  test_ascir_ops.cpp  test_cg_util.cpp
tests/autofuse/ut/att/: CMakeLists.txt
tests/autofuse/ut/autofuse/: CMakeLists.txt  asc_backend_fusion_decider_unittest.cpp  asc_backend_post_processor_unittest.cpp  asc_backend_torch_fusion_decider_unittest.cpp  asc_graph_axis_mapping_unittest.cpp  auto_fuser_unittest.cpp  autofuse_backend_stub.cpp  autofuse_pattern_fusion_unittest.cpp  autofuse_utils_unittest.cpp  concat_slice_simplification_pass_unittest.cpp  decompose_large_const_pass_unittest.cpp  fusion_strategy_solver_manual_test.cpp  fusion_strategy_solver_unittest.cpp  fusion_strategy_solver_unittest_2.cpp  loop_api_unittest.cpp  loop_ascir_lowerer_pruner_unittest.cpp  loop_lowering_manager_asc_backend_unittest.cpp  loop_lowering_manager_lowering_strategy_unittest.cpp  loop_lowering_manager_node_lowering_unittest.cpp  op_creator_register.h  pattern_fusion_pass_unittest.cpp  redundant_op_remove_pass_unittest.cpp  runtime_stub.h  test.cpp  test_lowering_and_canfuse.cpp
tests/autofuse/ut/codegen/: CMakeLists.txt  codegen_infershape_unittest.cpp  test_codegen_binary_api_call_v2.cpp  test_codegen_gen_get_kernel_and_json.cpp  test_codegen_kernel.cpp  test_codegen_kernel_tiler.cpp  test_codegen_load_store_api.cpp  test_codegen_non_dichotomy_reduce_api_call.cpp  test_codegen_removepad_api_call.cpp  test_codegen_tiling.cpp  test_codegen_tiling_data.cpp  test_codegen_unary_api_call.cpp
tests/autofuse/ut/common/: CMakeLists.txt  test_auto_fuse_config.cpp  test_common_utils.cpp  test_tracing_record_manager.cpp
tests/autofuse/ut/e2e/: CMakeLists.txt  e2e.cmake  e2e_broadcast.cpp  e2e_broadcast.h  e2e_common.h  e2e_load_abs_store.cpp  e2e_load_abs_store.h  e2e_softmax.cpp  e2e_softmax.h  test_e2e_constant_load_gt_store.cpp  test_e2e_load_abs_store.cpp  test_e2e_softmax.cpp
tests/autofuse/ut/optimize/: CMakeLists.txt  autofuse_ascgraph.cpp  autofuse_ascgraph.h  test_buf_que_allocator.cpp  test_dtype_consistency.cpp  test_fusedgraph_modifier.cpp  test_fusedgraph_unfolder.cpp  test_optimizer.cpp
tests/autofuse/ut/py_module/: CMakeLists.txt  test_py_module.cpp  test_py_pyascir_types.cpp
tests/autofuse/ut/python/: test_python_ascir.py
tests/framework/eager_style_graph_builder/: CMakeLists.txt  all_ops.cc  all_ops.h  all_ops_cpp.h  esb_funcs.cc  esb_funcs.h  esb_graph.cc  esb_tensor.h
tests/ge/st/testcase/: CMakeLists.txt  build_cache_system_test.cc  common_setup.cc  common_setup.h  ffts_dump_test.cc  hccl_unittest.cc  init_ge.h  test_aoe.cc  test_atc.cc  test_autofuse_offline.cc  test_concat_notask_pass.cc  test_ctrl_flow_compile.cc  test_ctrl_flow_execute.cc  test_ctrl_flow_v2.cc  test_custom_task_info_mode.cc  test_davinci_model_execute.cc  test_deleted_op.cc  test_deployer_daemon.cc  test_dump.cc  test_dump_callback.cc  test_dynamic_graph.cc  test_dynamic_stack_execute.cc  test_engine.cc  test_external_allocator_graph.cc  test_ffts_plus_executor.cc  test_file_constant.cc  test_fm_memory_refresh.cc  test_framework_dummy.cc  test_ge_api.cc  test_ge_api_v2.cc  test_ge_executor.cc  test_ge_ir_build.cc  test_graph_compiler.cc  test_graph_executor.cc  test_hccl_dump.cc  test_helper_runtime.cc  test_infershape_and_folding.cc  test_input_merge_copy.cc  test_kernel_manager.cc  test_known_dynamic_execute.cc  (+28 more)
(+10608 files in other folders)
