add_executable(codegen_st
        test.cpp
        test_codegen_infershape.cpp
)
target_compile_definitions(codegen_st PRIVATE
        CMAKE_BINARY_DIR=\"${CMAKE_BINARY_DIR}\"
        ASCEND_INSTALL_PATH=\"${ASCEND_INSTALL_PATH}\"
)
target_link_libraries(codegen_st
    -Wl,--no-as-needed
    atrace
    optimize
    codegen
    aihac_ir
    aihac_ir_register
    graph_base
    graph
    metadef
    ascir
    ascgen_common
    aihac_symbolizer
    json
    ascendc_api_extend
    ascendc_api_regbase_extend
    ascendc_api_cube_extend
    GTest::gtest)
